# youtube-playlist-manager

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yaml
src/: main.rs
src/youtube_manager/: mod.rs  playlist.rs
