[package]
name = "stream-inspector"
version = "0.1.0"
edition = "2018"

[dependencies]
async-trait = "0.1.51"
chrono = "0.4.19"
clap = "2.33.3"
google-youtube3 = "2.0.8"
hyper = "0.14.13"
hyper-rustls = "0.22.1"
itertools = "0.10.1"
mime = "0.3.16"
serde = "1.0.130"
tokio = "1.12.0"
yup-oauth2 = "5.1.0"
