[package]
name = "playlist-manager"
version = "0.0.4"
edition = "2018"

[dependencies]
async-log = "2.0.0"
async-trait = "0.1.51"
chrono = "0.4.19"
chrono-tz = "0.6"
clap = "2.33.3"
env_logger = "0.9.0"
google-youtube3 = "2.0.8"
hyper = "0.14.13"
hyper-rustls = "0.22.1"
itertools = "0.10.1"
log = "0.4.14"
mime = "0.3.16"
serde = "1.0.130"
tokio = "1.12.0"
webbrowser = "0.5.5"
yup-oauth2 = "5.1.0"

[patch.crates-io]
yup-oauth2 = { git = "https://github.com/glyn/yup-oauth2.git", branch = "163-inner-flow-after-failed-refresh-v5.1.0" }